force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/Customer_Potential_Study_Equipment__c.object-meta.xml
<CustomObject>
    <label>Customer Potential Study - Equipment</label>
    <nameField>
        <label>Equipment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Potential Study - Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>