force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Annual_Potential_Nos__c.field-meta.xml
<CustomField>
    <fullName>Annual_Potential_Nos__c</fullName>
    <label>Annual Potential Nos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>