force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Annual_Potnl_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Potnl_Value__c</fullName>
    <label>Annual Potnl Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>