force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Average_Repl_Cycle_Mths__c.field-meta.xml
<CustomField>
    <fullName>Average_Repl_Cycle_Mths__c</fullName>
    <label>Average Repl Cycle (Mths)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>