force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Avg_Price__c.field-meta.xml
<CustomField>
    <fullName>Avg_Price__c</fullName>
    <label>Avg Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>