force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Fleet_Nos__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Nos__c</fullName>
    <label>Fleet Nos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>