force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Front_Tyre_Qty__c.field-meta.xml
<CustomField>
    <fullName>Front_Tyre_Qty__c</fullName>
    <label>Front Tyre Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>