force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Front_Tyre_Size_Bl_NM_Lip_Reg__c.field-meta.xml
<CustomField>
    <fullName>Front_Tyre_Size_Bl_NM_Lip_Reg__c</fullName>
    <label>Front Tyre Size-Bl/NM-Lip/Reg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>