force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Motive_Power__c.field-meta.xml
<CustomField>
    <fullName>Motive_Power__c</fullName>
    <label>Motive Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>