force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/No_of_Axles__c.field-meta.xml
<CustomField>
    <fullName>No_of_Axles__c</fullName>
    <label>No of Axles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>