force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Qtr_3__c.field-meta.xml
<CustomField>
    <fullName>Qtr_3__c</fullName>
    <label>Qtr 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>