force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Rear_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Rear_Tyre_Size__c</fullName>
    <label>Rear Tyre Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>