force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Ton__c.field-meta.xml
<CustomField>
    <fullName>Ton__c</fullName>
    <label>Ton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>