force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Equipment__c/fields/Total_No_of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Tyres__c</fullName>
    <label>Total No of Tyres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>